# datamatrix

./: .travis.yml  Untitled0.ipynb  api.py  copyright  pyproject.toml  readme.ipynb  readme.md  run_unittests.sh  setup.py  stdeb.cfg  testcases.py  using-datamatrix.ipynb
.github/workflows/: publish-package.yaml  run-unittests.yaml
datamatrix/: __init__.py  _cache.py  _config.py  _ordered_state.py  convert.py  dispatch.py  functional.py  monkeypatch.py  multidimensional.py  operations.py  plot.py  py3compat.py  series.py
datamatrix/_datamatrix/: _basecolumn.py  _blinkreconstruct.py  _callable_values.py  _datamatrix.py  _index.py  _mixedcolumn.py  _multidimensionalcolumn.py  _nifticolumn.py  _numericcolumn.py  _row.py  _seriescolumn.py  _sort.py  _uninstantiatedcolumn.py
datamatrix/_functional/: _memoize.py
datamatrix/colors/: tango.py
datamatrix/convert/: __init__.py  _html.py  _json.py  _mne.py  _pandas.py
datamatrix/io/: __init__.py  _bin.py  _excel.py  _eyelink.py  _pickle.py  _text.py
datamatrix/operations/: series.py
doc-pelican/: baseconf.py  build-api.py  build-menu.py  constants.yaml  parse-theme.py  pelicanconf.py  publishconf.py  sitemap.yaml
testcases/: __init__.py  test_basics.py  test_blinkreconstruct.py  test_compatibility.py  test_convert.py  test_desc_stats.py  test_extra_operations.py  test_functional.py  test_io.py  test_iteration.py  test_memmap.py  test_nifti.py  test_operations.py  test_order.py  test_properties.py  test_select_merge.py  test_series_operations.py  test_tools.py  test_typing.py  test_uninstantiated_column.py
(+55 files in other folders)
